# graphics_project

./: CMakeLists.txt
include/project_header/: mainMenu.h  projectile.h  userInput.h
src/libbgi_src/: dibutil.cxx  drawing.cxx  file.cxx  misc.cxx  mouse.cxx  palette.cxx  text.cxx  winbgi.cxx  winthread.cxx
src/project_src/: main.cpp  mainMenu.cpp  projectile.cpp  userInput.cpp
